--- a/moviemall/Views/Movies/Random.cshtml
+++ b/moviemall/Views/Movies/Random.cshtml
@@ -1,7 +1,10 @@
-﻿@{
+﻿@Model moviemall.Models.Movie
+
+@{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
-
+<h2>
+    @ViewBag.mname
+</h2>
