--- a/moviemall/Views/Shared/_NavBar.cshtml
+++ b/moviemall/Views/Shared/_NavBar.cshtml
@@ -14,8 +14,9 @@
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 
-                <li>@Html.ActionLink("Customer","Index","Home")</li>
-                <li>@Html.ActionLink("Movie", "Index", "Home")</li>
+                <li>@Html.ActionLink("Customers","Index","Customers")</li>
+                <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+               
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
