--- a/moviemall/Views/Movies/Index.cshtml
+++ b/moviemall/Views/Movies/Index.cshtml
@@ -26,7 +26,7 @@
         {
         <tr>
             <td>
-                @Html.ActionLink(m.Name, "Details", "Movies")
+                @Html.ActionLink(m.Name, "Details", "Movies",new { Id = m.Id },null)
             </td>
             <td>
                 @m.MovieGenre.GenreName
