Day 13(2)- 1-21-18 Sec4 and Ex1 Done

--- a/moviemall/Views/Customers/Index.cshtml
+++ b/moviemall/Views/Customers/Index.cshtml
@@ -16,7 +16,7 @@
     {
     <tr>
         <td>
-            @Html.ActionLink(c.Name, "Details", "Customers",new { Id = c.Id },null)
+            @Html.ActionLink(c.Name, "Edit", "Customers",new { Id = c.Id },null)
         </td>
         <td>
             @c.MembershipType.Name
