--- a/moviemall/Views/Movies/Index.cshtml
+++ b/moviemall/Views/Movies/Index.cshtml
@@ -10,6 +10,9 @@
 }
 <h2>@controllerName</h2>
 
+@Html.ActionLink("New Movies", "New", "Movies",null ,new { @class= "btn btn-primary btn-large" })
+
+
 <table class="table table-bordered table-hover ">
     <thead>
         <tr>
