--- a/moviemall/Views/Customers/CustomerForm.cshtml
+++ b/moviemall/Views/Customers/CustomerForm.cshtml
@@ -8,7 +8,7 @@
 
 <h2>New Customer</h2>
 
-@using (Html.BeginForm("Create", "Customer"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name):
@@ -16,7 +16,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Birthdate):
-        @Html.TextBoxFor(m => m.Customer.Birthdate, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.Birthdate,"{0:MM/dd/yyyy}", new { @class = "form-control" })
+    </div>
+   
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId):
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes,"Id","Name"),"--- Select ---", new { @class = "form-control" })
     </div>
     @*<div class="form-check-input">*@
     <div class="checkbox">
@@ -24,12 +29,9 @@
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) @Html.LabelFor(m => m.Customer.IsSubscribedToNewsletter)
         </label>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.MembershipTypeId):
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes,"Id","Name"),"--- Select ---", new { @class = "form-control" })
-    </div>
-    <button type="submit" class="btn-group" >
-
+    @Html.HiddenFor(m=>m.Customer.Id)
+    <button type="submit" class="btn btn-primary">
+        Save
     </button>
 
 }
