--- a/moviemall/Views/Movies/Index.cshtml
+++ b/moviemall/Views/Movies/Index.cshtml
@@ -30,7 +30,7 @@
         <tr>
             <td>
                @* @Html.ActionLink(m.Name, "Details", "Movies",new { Id = m.Id },null)*@
-                @Html.ActionLink(m.Name, "New", "Movies", new { Id = m.Id }, null)
+                @Html.ActionLink(m.Name, "Edit", "Movies", new { Id = m.Id }, null)
             </td>
             <td>
                 @m.MovieGenre.GenreName
