--- a/moviemall/Views/Movies/MovieForm.cshtml
+++ b/moviemall/Views/Movies/MovieForm.cshtml
@@ -8,24 +8,26 @@
     @ViewData["typeOfUpdate"] Movie
 </h2>
 
-@using (Html.BeginForm("Save", "Movies"))
+@using (Html.BeginForm("Save", "Movies")) //ActionName, ControllerName
+
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Name):
-        @Html.TextBoxFor(m=>m.Movie.Name, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate):
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate,new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.MovieGenreId)
-        @Html.DropDownListFor(m => m.Movie.MovieGenreId,new SelectList(Model.MovieGenre,"Id","GenreName"), "--- Select ---",new { @class = "form-control"})
+        @Html.DropDownListFor(m => m.Movie.MovieGenreId, new SelectList(Model.MovieGenre, "Id", "GenreName"), "--- Select ---", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.NumberInStock):
-        @Html.TextBoxFor(m => m.Movie.NumberInStock, new {@class ="form-control"})
+        @Html.TextBoxFor(m => m.Movie.NumberInStock, new { @class = "form-control" })
     </div>
+        @Html.HiddenFor(m => m.Movie.Id)
     <button class="btn btn-primary" type="submit">
         Save
     </button>
