--- a/moviemall/Views/Customers/CustomerForm.cshtml
+++ b/moviemall/Views/Customers/CustomerForm.cshtml
@@ -10,18 +10,21 @@
 
 @using (Html.BeginForm("Save", "Customers"))
 {
+    @Html.ValidationSummary(true, "Please corerct the errors below.")
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name):
-        @Html.TextBoxFor(m => m.Customer.Name, new {@class ="form-control"})
+        @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId):
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "--- Select ---", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Birthdate):
-        @Html.TextBoxFor(m => m.Customer.Birthdate,"{0:MM/dd/yyyy}", new { @class = "form-control" })
-    </div>
-   
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.MembershipTypeId):
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes,"Id","Name"),"--- Select ---", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.Birthdate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Birthdate)
     </div>
     @*<div class="form-check-input">*@
     <div class="checkbox">
@@ -29,11 +32,14 @@
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsletter) @Html.LabelFor(m => m.Customer.IsSubscribedToNewsletter)
         </label>
     </div>
-    @Html.HiddenFor(m=>m.Customer.Id)
+    @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">
         Save
     </button>
-
 }
 
-
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
